<resources>
    <string name="app_name">HCE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="registration_button">Sign up</string>


    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="password2_hint">Repeat password</string>
    <string name="email_hint">E-mail</string>
    <string name="phone_hint">Phone number</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_home">Main card</string>
    <string name="title_history">History</string>
    <string name="title_mycards">My cards</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>

    <string name="servicedesc">HCE.UZ</string>
    <string name="aiddescription">hce.uz</string>
    <string name="nameTxt">Name</string>
    <string name="saveTxt">Save</string>
    <string name="settings">Settings</string>

    <string name="title_activity_hcerequest">Request</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">OOO Shaxzod Saidmurodov requestion\n100.000 UZS\nDo you accept this request?</string>
    <string name="nitify_melody">Notification melody</string>
    <string name="settings_volume">Volume</string>
    <string name="settings_vibration">Vibration</string>
    <string name="notification">Notification</string>
    <string name="card_number">Card number</string>
    <string name="card_cash">Card_cash</string>
    <string name="_8942">⋮</string>
    <string name="card_name">Card_name</string>
    <string name="card_expdate">Expiry date</string>
    <string name="card_activate_btn">Activate</string>
    <string name="card_delete_btn">Delete</string>
    <string name="home_page">Home page</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="favorites">Favorites</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="logout">Log out</string>
    <string name="my_cards">My cards</string>
    <string name="transactions">Transactions</string>
    <string name="add_card">Add card</string>
    <string name="add">Add</string>
    <string name="timer">00:00</string>
    <string name="code">CODE</string>
    <string name="virify">Virify</string>
    <string name="card_num_ex">86001234567890123456</string>
    <string name="exp_date_ex">12/21</string>
</resources>
